# Pragma

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
pragma-cli/: Cargo.toml
pragma-cli/src/: main.rs
pragma-parser/: Cargo.toml  patterns.toml
pragma-parser/src/: lib.rs  main.rs  parser.rs  settings.rs  sink.rs  storage.rs  test_parser.rs  types.rs
src/: App.vue  PRAGMA_CONSTANTS.ts  atomFilter.test.ts  atomFilter.ts  style.css
src-tauri/: Cargo.toml  hello.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  lib.rs  main.rs  process.rs  protocol.rs  trust.rs  usage.rs
src/components/: AnalysisCard.vue  AtomCard.vue  AtomStream.vue  ClosingCard.vue  ComposerModal.vue  DiffViewer.vue  HelpPanel.vue  PlanCard.vue  PragmaPanel.vue  QuestionsCard.vue  RawNoteCard.vue  ReportCard.vue  SessionPanel.vue  SettingsPanel.vue  TestsCard.vue  ToolUseBody.vue  UsageModal.vue
src/composables/: useAttachments.ts  usePanelResize.ts  useTheme.ts
src/stores/: session.ts  settings.ts
