[package]
name = "pragma-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lightweb.it <lightweb.it@gmail.com>"]
description = "Pragma CLI wrapper — wraps an agent process and streams typed atoms as NDJSON"
repository = "https://github.com/lightwebit/pragma"

[[bin]]
name = "pragma"
path = "src/main.rs"

[dependencies]
pragma-parser = { path = "../pragma-parser" }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
