[package]
name = "pragma-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lightweb.it <lightweb.it@gmail.com>"]
description = "Pragma atom parser — reads agent stdout, emits typed atoms as NDJSON"
repository = "https://github.com/lightwebit/pragma"

[lib]
name = "pragma_parser"
path = "src/lib.rs"

[[bin]]
name = "pragma-parser"
path = "src/main.rs"

[[bin]]
name = "test-parser"
path = "src/test_parser.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
