[package]
name = "pragma-tauri"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["lightweb.it <lightweb.it@gmail.com>"]
description = "Pragma desktop app — Tauri shell"
repository = "https://github.com/lightwebit/pragma"

[package.metadata.bundle]
identifier = "com.noema.pragma"
icon = ["icons/icon.ico"]

[lib]
name = "pragma_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                       = { version = "2", features = [] }
tauri-plugin-notification   = { version = "2" }
tauri-plugin-single-instance = { version = "2" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4"] }
tokio       = { version = "1", features = ["process", "io-util", "time"] }
pragma-parser = { path = "../pragma-parser" }
rfd           = "0.14"
portable-pty  = "0.8"
